# mystogan-bot

./: .gitignore  README.md  cookies.txt  pyproject.toml  test_log.py
src/domain/discord/: repository.py
src/domain/music_providers/: entity.py  repository.py
src/infraestructure/: injections.py
src/infraestructure/adapter/discord/: command_view.py  music_player_view.py
src/infraestructure/discord/: session.py
src/infraestructure/music_providers/: youtube.py
src/infraestructure/system/: app.py
